# mvp-voipicking

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/tech/voicer/voipicking/: MainActivity.kt
app/src/main/java/tech/voicer/voipicking/data/db/: AppDatabase.kt  Daos.kt  Entities.kt
app/src/main/java/tech/voicer/voipicking/data/model/: Pedido.kt
app/src/main/java/tech/voicer/voipicking/repository/: PedidoRepository.kt
app/src/main/java/tech/voicer/voipicking/state/: PickingCommand.kt  PickingEvent.kt  PickingState.kt  PickingStateMachine.kt
app/src/main/java/tech/voicer/voipicking/ui/: PickingViewModel.kt
app/src/main/java/tech/voicer/voipicking/voice/: AudioRecorder.kt  ModelManager.kt  SinalSonoro.kt  SttEngine.kt  TtsManager.kt  VoiceActivityDetector.kt  WhisperSttEngine.kt
app/src/main/res/values/: strings.xml
docs/: EP_ 2026_000142.json
numberunderstanding/: build.gradle.kts
numberunderstanding/src/main/java/com/voicer/numberunderstanding/: PortugueseNumberParser.kt
whisperlib/: build.gradle.kts
whisperlib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt
whisperlib/src/main/jni/whisper/: CMakeLists.txt  jni.c  jni.cpp
